# csfloat

./: .env  .gitignore  1.md  README.md  api-dmarket.json  package-lock.json  pyproject.toml
apps/csfloat-dash/: .env.example  .gitignore  README.md  accessibility-check.md  index.html  migration-checklist.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/csfloat-dash/server/: index.ts
apps/csfloat-dash/server/data/: collections.json
apps/csfloat-dash/src/: App.tsx  index.css
apps/csfloat-dash/src/__tests__/: guardrails.spec.ts  url.spec.ts
apps/csfloat-dash/src/components/: FiltersPanel.tsx  ListingCard.tsx  ListingsGrid.tsx  Toolbar.tsx
apps/csfloat-dash/src/pages/: Home.tsx
apps/csfloat-dash/src/store/: useFilters.ts  useListings.ts
csfloat_client/: __init__.py  cli.py  config.py  endpoints.py  models.py  utils.py
docs/: 01-producto-y-proposito.md  02-stack-tecnologico.md  03-estructura-y-arquitectura.md  04-endpoints-api.md  05-comandos-cli.md  06-estrategia-testing.md  07-manejo-errores.md  08-modelos-pydantic.md  README.md  collections_slugs.jsonl
examples/: find_by_seed.py  find_low_float.py
js_appscript/: float.js  tradeups.js
old/: 1.md
old/.kiro/specs/cs2-tradeup-analyzer/: design.md  requirements.md  tasks.md
old/apps/csfloat-dash/: index.html  tsconfig.json
old/csfloat_client/: http.py
old/docs/: README.md
old/examples/: list_item.py
old/tests/: test_pagination.py
tests/: conftest.py  test_error_handling.py  test_listing_by_id.py  test_listings_filters.py  test_post_listing_auth.py
(+3 files in other folders)
